bg image fix (back to cover on mobile)

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,15 @@ html {
     #32353e 100%
   );
 }
+
+@supports (-webkit-touch-callout: none) {
+  #img-bg {
+    background-attachment: scroll !important;
+  }
+}
+
+@supports not (-webkit-touch-callout: none) {
+  #img-bg {
+    background-attachment: fixed !important;
+  }
+}
